# quick-text

./: .gitignore  LICENSE  README.md  pyproject.toml  pysidedeploy.spec  quick_text.py  requirements.txt
.github/workflows/: tests.yml
paper_md_extractor/: __init__.py  converter.py  gui.py
paper_md_extractor/assets/: app-icon.icns
scripts/: build_icon.py
tests/: smoke_convert.py  test_converter.py  test_gui.py
