[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-text"
version = "0.1.0"
description = "Desktop GUI for extracting academic PDFs to Markdown."
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.24.0",
  "Pillow>=10.0.0",
  "PySide6-Essentials>=6.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "coverage>=7.0"]
ocr = ["pytesseract>=0.3.10"]

[project.scripts]
quick-text = "paper_md_extractor.gui:main"

[tool.setuptools.packages.find]
include = ["paper_md_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "smoke_*.py"]
addopts = "-q"

[tool.coverage.run]
source = ["paper_md_extractor"]
omit = ["paper_md_extractor/__main__.py"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true
